Bug 7695 - Supermicro X7DB8+ Boot failure
Summary: Supermicro X7DB8+ Boot failure
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Interrupts (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-16 22:21 UTC by Len Brown
Modified: 2007-01-03 18:08 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.20-rc1+sysfs patch
Tree: Mainline
Subsystem:
Regression: ---


Attachments
console.log.2.6.20-rc1 (76.60 KB, text/plain)
2006-12-16 22:23 UTC, Len Brown
Details
console.log.2.6.20-rc+sysfs-patch (52.44 KB, text/plain)
2006-12-16 22:24 UTC, Len Brown
Details
acpidump (104.11 KB, text/plain)
2006-12-16 22:25 UTC, Len Brown
Details
Rui's debug patch for 2.6.20-rc1 (617 bytes, patch)
2006-12-16 22:32 UTC, Len Brown
Details | Diff
2.6.20-rc1 dmest with above pach included (56.38 KB, text/plain)
2006-12-16 22:42 UTC, Len Brown
Details
patch-hadle-_ADR-Based-devices (6.91 KB, patch)
2006-12-18 03:43 UTC, Zhang Rui
Details | Diff
patch against 2.6.20-rc1-mm (7.98 KB, patch)
2006-12-19 00:58 UTC, Zhang Rui
Details | Diff
dmesg (57.70 KB, text/plain)
2006-12-20 23:44 UTC, Len Brown
Details

Description Len Brown 2006-12-16 22:21:52 UTC
A Supermicro X7DB8+ does not boot -- SCSI driver dies,
apparently due to lack of interrupts.  First interesting
difference in dmest without and with the sysfs patch below:


< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMD0._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMD0.BPD0.PXH0._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMD0.BPD0.PXH1._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMD0.BPD2._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMF3._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P4._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P6._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.PEX0._PRT]
< ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.PCIB._PRT]
268a318,327
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2._PRT]
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMD0._PRT]
> ACPI Exception (pci_bind-0153): AE_NOT_FOUND, Invalid ACPI-PCI context for 
parent device BPD0 [20061109]
> ACPI Exception (pci_bind-0153): AE_NOT_FOUND, Invalid ACPI-PCI context for 
parent device BPD0 [20061109]
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMD0.BPD2._PRT]
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P2.BMF3._PRT]
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P4._PRT]
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.P0P6._PRT]
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.PEX0._PRT]
> ACPI: PCI Interrupt Routing Table [\_SB_.PCI0.PCIB._PRT]
Comment 1 Len Brown 2006-12-16 22:23:38 UTC
Created attachment 9834 [details]
console.log.2.6.20-rc1
Comment 2 Len Brown 2006-12-16 22:24:37 UTC
Created attachment 9835 [details]
console.log.2.6.20-rc+sysfs-patch
Comment 3 Len Brown 2006-12-16 22:25:45 UTC
Created attachment 9836 [details]
acpidump
Comment 4 Len Brown 2006-12-16 22:32:21 UTC
Created attachment 9837 [details]
Rui's debug patch for 2.6.20-rc1
Comment 5 Len Brown 2006-12-16 22:42:47 UTC
Created attachment 9838 [details]
2.6.20-rc1 dmest with above pach included
Comment 6 Zhang Rui 2006-12-18 03:43:34 UTC
Created attachment 9862 [details]
patch-hadle-_ADR-Based-devices
Comment 7 Zhang Rui 2006-12-18 03:51:59 UTC
According to the ACPIDUMP above, some _ADR-Based deivces may not have _PRT, 
while we suppose they should.
So we didn't bind this kind of devices in the former patches.
This patch will fix this problem.

Len, can you try this patch based on the sysfs branch?
And, please don't remove the sysfs patches from acpi-test. It's never gonna be 
stable without tests.
Thanks
Comment 8 Zhang Rui 2006-12-19 00:58:15 UTC
Created attachment 9873 [details]
patch against 2.6.20-rc1-mm

The last patch can only be applied to -rc1+sysfs
This one is against -mm.
Comment 9 Zhang Rui 2006-12-20 23:21:39 UTC
Hi, Len
I won't generate a new patch as the patch in comment #8 seems to be the most 
reasonable way to fix this bug.
Can you have a try? :)
Comment 10 Len Brown 2006-12-20 23:44:23 UTC
Created attachment 9909 [details]
dmesg

with patch from comment #4 the supermicro box boots.
patch applied to sysfs branch.
Comment 11 Len Brown 2007-01-03 18:08:52 UTC
This bug was against 2.6.20-rc1-mm1
and the fix shipped in 2.6.20-rc2-mm1


Note You need to log in before you can comment on or make changes to this bug.